...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/cb_select"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{localVideo.name}"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toTopOf="@id/tv_size"
                app:layout_constraintEnd_toStartOf="@+id/iv_more"
                app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Video_file_name_very_long_title_example.mp4" />

            <com.google.android.material.textview.MaterialTextView
...
